--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,32 @@ __pycache__/buttons.cpython-37.pyc
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/dictionaries/seayzagar.xml
 .DS_Store
+*.pyc
+SPRITES/.DS_Store
+BACKDROPS/.DS_Store
+__pycache__/spritesheet_function.cpython-37.pyc
+__pycache__/player.cpython-37.pyc
+__pycache__/platforms.cpython-37.pyc
+__pycache__/objects.cpython-37.pyc
+__pycache__/levels.cpython-37.pyc
+__pycache__/constants.cpython-37.pyc
+__pycache__/buttons.cpython-37.pyc
+.DS_Store
+SPRITES/.DS_Store
+BACKDROPS/.DS_Store
+__pycache__/spritesheet_function.cpython-37.pyc
+__pycache__/player.cpython-37.pyc
+__pycache__/platforms.cpython-37.pyc
+__pycache__/objects.cpython-37.pyc
+__pycache__/levels.cpython-37.pyc
+__pycache__/constants.cpython-37.pyc
+__pycache__/buttons.cpython-37.pyc
+.DS_Store
+__pycache__/spritesheet_function.cpython-37.pyc
+__pycache__/player.cpython-37.pyc
+__pycache__/platforms.cpython-37.pyc
+__pycache__/objects.cpython-37.pyc
+__pycache__/levels.cpython-37.pyc
+__pycache__/constants.cpython-37.pyc
+__pycache__/buttons.cpython-37.pyc
+*.pyc
